@@ -47,7 +47,7 @@ AC_SUBST(BONOBOUI_LIBS)
 PKG_CHECK_MODULES(BONOBOUI_GLADE, $BONOBOUI_MODULES libglade-2.0 >= 1.99.5)
 AC_SUBST(BONOBOUI_GLADE_CFLAGS)
 AC_SUBST(BONOBOUI_GLADE_LIBS)
- 
+
 # glib-genmarshal
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 # glib-mkenums
@@ -59,6 +59,7 @@ po/Makefile.in
 bonobo/Makefile
 bonobo/libbonoboui-2.0.pc
 glade/Makefile
+monikers/Makefile
 samples/Makefile
 samples/controls/Makefile
 samples/bonoboui/Makefile
